[package]
name = "opus"
version = "0.3.1"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = [
	"api-bindings",
	"encoding",
	"compression",
	"multimedia::audio",
	"multimedia::encoding",
]

repository = "https://github.com/SpaceManiac/opus-rs"

edition = "2015"

[dependencies]
audiopus_sys = { git = "https://github.com/hexa0/audiopus_sys.git", branch = "master" }

[features]
static = ["audiopus_sys/static"]
qext = ["audiopus_sys/qext"]
dred = ["audiopus_sys/dred"]
osce = ["audiopus_sys/osce"]
disable_encoder = ["audiopus_sys/disable_encoder"]
diable_decoder = ["audiopus_sys/diable_decoder"]
